tests/snapshots/ast_tests__ast_tests__ast_parse_identifier_1.snap
---
source: tests/ast_tests.rs
assertion_line: 10
expression: "AST::parse(tokens)"
---
AST(
    Expression {
        span: Span {
            start: 0,
            end: 3,
        },
        expresssion: [
            MemberExpression {
                span: Span {
                    start: 0,
                    end: 3,
                },
                object: Identifier {
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                    value: String(
                        "$",
                    ),
                },
                property: Identifier {
                    span: Span {
                        start: 2,
                        end: 3,
                    },
                    value: String(
                        "a",
                    ),
                },
            },
        ],
    },
)
