tests/snapshots/ast_tests__ast_tests__ast_parse_identifier_2.snap
---
source: tests/ast_tests.rs
assertion_line: 17
expression: "AST::parse(tokens)"
---
AST(
    Expression {
        span: Span {
            start: 0,
            end: 5,
        },
        expresssion: [
            MemberExpression {
                span: Span {
                    start: 0,
                    end: 5,
                },
                object: Identifier {
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                    value: String(
                        "$",
                    ),
                },
                property: MemberExpression {
                    span: Span {
                        start: 2,
                        end: 5,
                    },
                    object: Identifier {
                        span: Span {
                            start: 2,
                            end: 3,
                        },
                        value: String(
                            "a",
                        ),
                    },
                    property: Identifier {
                        span: Span {
                            start: 4,
                            end: 5,
                        },
                        value: String(
                            "b",
                        ),
                    },
                },
            },
        ],
    },
)
